--- a/q1/makefile
+++ b/q1/makefile
@@ -1,10 +1,10 @@
 all:	1a1	1a2	1b1	1b2
 
 1a1:
-	gcc -o 1a1 1a1.c
+	gcc -o 1a1 1a\ \(2\ bowls\).c
 1a2:
-	gcc -w -o 1a2 1a2.c
+	gcc -w -o 1a2 1a\ \(5\ bowls\).c
 1b1:
-	gcc -o 1b1 1b1.c
+	gcc -o 1b1 1b\ \(2\ bowls\).c
 1b2:
-	gcc -w -o 1b2 1b2.c
+	gcc -w -o 1b2 1b\ \(5\ bowls\).c
